--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
     <div class="container">
         <h1>InvestPotato.com is for Sale!</h1>
-        <p>The domain <strong>investpotato.com</strong>, the X.com handle <strong>@investpotato</strong>, and the Twitter handle <strong>@investpotato</strong> are all available for purchase.</p>
+        <p>The domain <strong>investpotato.com</strong>, the X.com handle <strong>@investpotato</strong>, and the Instagram handle <strong>@investpotato</strong> are all available for purchase.</p>
         <p class="price">Price: $10,000</p>
         <p class="contact">If you are interested, please contact us at <a href="mailto:investpotato@gmail.com">investpotato@gmail.com</a> for more details.</p>
     </div>
